--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="portofolio-container">
                     <!-- portofolio pertama start -->
                     <div class="portofolio-item" id="porto-item1">
-                        <p class="dearmecca"><a href="https://dillaizza.github.io/dearmeccaa/">dearmecca</a></p>
+                        <p class="dearmecca"><a href="https://fadillaiizzar.github.io/dearmecca/">dearmecca</a></p>
                     </div>
                     <!-- portofolio pertama end -->
                 </div>
