--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="section-konten">
             <!-- header home start -->
             <header>
-                <h1 class="text-hi">hi <span id="name">user</span>, welcome to my website</h1>
+                <h1 class="text-hi">hi <span id="name"></span>, welcome to my website</h1>
             </header>
             <!-- header home end -->
 
@@ -124,7 +124,7 @@
         <section class="portofolio">
             <!-- header portofolio start -->
             <header class="hider">
-                <h1 class="text-portofolio">portofolio web</h1>
+                <h1 class="text-portofolio">project website</h1>
             </header>
             <!-- header portofolio end -->
 
