--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="#home">home</a>
                 <a href="#profile">profile</a>
-                <a href="#portofolio">portofolio</a>
+                <a href="#portofolio">project</a>
                 <a href="#message">message us</a>
             </nav>
             <!-- navigation end -->
@@ -96,7 +96,7 @@
                         <p class="p-from">- yogyakarta -</p>
                         <br>
                         <p class="p-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ad unde, animi maxime repellendus ut cupiditate saepe molestias alias accusantium. Error, cupiditate possimus? Est dignissimos et quasi consequuntur fugiat voluptas.</p>
-                        <button class="button-prof-port"><a href="#portofolio">portofolio</a></button>
+                        <button class="button-prof-port"><a href="#portofolio">project</a></button>
                     </div>
                     <!-- box text profile end -->
 
@@ -142,15 +142,15 @@
                 <div class="portofolio-container">
                     <!-- portofolio kedua start -->
                     <div class="portofolio-item" id="porto-item2">
-                        <p class="dearmecca"><a href="https://fadillaiizzar.github.io/skaduta/">smkn 2 yk</a></p>
+                        <p class="dearmecca"><a href="https://fadillaiizzar.github.io/smk-2yk/">smkn 2 yk</a></p>
                     </div>
                     <!-- portofolio kedua end -->
                 </div>
 
                 <div class="portofolio-container">
                     <!-- portofolio ketiga start -->
-                    <div class="portofolio-item">
-                        <p class="dearmecca"><a href="">cmg soon</a></p>
+                    <div class="portofolio-item" id="porto-item3">
+                        <p class="dearmecca"><a href="https://fadillaiizzar.github.io/berlian-tiga/">berlian tiga</a></p>
                     </div>
                     <!-- portofolio ketiga end -->
                 </div>
