--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>dillaw</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body id="home">
 
@@ -35,13 +37,13 @@
         <section class="section-konten">
             <!-- header home start -->
             <header>
-                <h1 class="text-hi">hi <span id="name"></span>, welcome to my website</h1>
+                <h1 class="text-hi" data-aos="zoom-out-up" data-aos-duration="1100">hi <span id="name"></span>, welcome to my website</h1>
             </header>
             <!-- header home end -->
 
             <!-- article home banner start -->
             <article class="article-banner">
-                <p class="p-lat">ini website portofolio</p>
+                <p class="p-lat" data-aos="zoom-out-up" data-aos-duration="1300">ini website portofolio</p>
                 <!-- input change name user start -->
                 <input required type="text" placeholder="change name" id="name-input">
                 <button id="kirim">submit</button>
@@ -52,7 +54,8 @@
                     <!-- banner img start -->
                     <img 
                     class="banner-container" 
-                    src="./assets/banner.jpeg"/>
+                    src="./assets/banner.jpeg"
+                    data-aos="zoom-out-up" data-aos-duration="1600"/>
 
                     <img class="banner-container" 
                     src="./assets/back.jpeg"/>
@@ -81,7 +84,7 @@
         <section class="profile">
             <!-- header profile start -->
             <header class="header-profile">
-                <div class="box-header-profile">
+                <div class="box-header-profile" data-aos="fade-down" data-aos-duration="1100">
                     <h1 class="text-profile">want to see my profile?</h1>
                 </div>
             </header>
@@ -92,11 +95,11 @@
                 <div class="profile-container">
                     <!-- box text profile start -->
                     <div class="text-cont-profile">
-                        <h3 class="h3-dilla">fadilla izzar</h3>
-                        <p class="p-from">- yogyakarta -</p>
+                        <h3 class="h3-dilla" data-aos="fade-right" data-aos-duration="1100">fadilla izzar</h3>
+                        <p class="p-from" data-aos="fade-right" data-aos-duration="1300">- yogyakarta -</p>
                         <br>
-                        <p class="p-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ad unde, animi maxime repellendus ut cupiditate saepe molestias alias accusantium. Error, cupiditate possimus? Est dignissimos et quasi consequuntur fugiat voluptas.</p>
-                        <button class="button-prof-port"><a href="#portofolio">project</a></button>
+                        <p class="p-about" data-aos="fade-right" data-aos-duration="1400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ad unde, animi maxime repellendus ut cupiditate saepe molestias alias accusantium. Error, cupiditate possimus? Est dignissimos et quasi consequuntur fugiat voluptas.</p>
+                        <button class="button-prof-port" data-aos="fade-right" data-aos-duration="1400"><a href="#portofolio">project</a></button>
                     </div>
                     <!-- box text profile end -->
 
@@ -105,7 +108,7 @@
                         <!-- img -->
                         <div class="box-gambar">
                             <!-- text -->
-                            <div class="text-atas">
+                            <div class="text-atas" data-aos="fade-right" data-aos-duration="1100">
                                 <p class="p-dilla">pelajar</p>
                             </div>
                         </div>
@@ -124,7 +127,7 @@
         <section class="portofolio">
             <!-- header portofolio start -->
             <header class="hider">
-                <h1 class="text-portofolio">project website</h1>
+                <h1 class="text-portofolio" data-aos="fade-down" data-aos-duration="1300">project website</h1>
             </header>
             <!-- header portofolio end -->
 
@@ -133,7 +136,7 @@
                 <!-- img cover portifolio start -->
                 <div class="portofolio-container">
                     <!-- portofolio pertama start -->
-                    <div class="portofolio-item" id="porto-item1">
+                    <div class="portofolio-item" id="porto-item1" data-aos="zoom-in-right" data-aos-duration="1200">
                         <p class="dearmecca"><a href="https://fadillaiizzar.github.io/dearmecca/">dearmecca</a></p>
                     </div>
                     <!-- portofolio pertama end -->
@@ -141,7 +144,7 @@
 
                 <div class="portofolio-container">
                     <!-- portofolio kedua start -->
-                    <div class="portofolio-item" id="porto-item2">
+                    <div class="portofolio-item" id="porto-item2" data-aos="zoom-in-right" data-aos-duration="1300">
                         <p class="dearmecca"><a href="https://fadillaiizzar.github.io/smk-2yk/">smkn 2 yk</a></p>
                     </div>
                     <!-- portofolio kedua end -->
@@ -149,7 +152,7 @@
 
                 <div class="portofolio-container">
                     <!-- portofolio ketiga start -->
-                    <div class="portofolio-item" id="porto-item3">
+                    <div class="portofolio-item" id="porto-item3" data-aos="zoom-in-right" data-aos-duration="1400">
                         <p class="dearmecca"><a href="https://fadillaiizzar.github.io/berlian-tiga/">berlian tiga</a></p>
                     </div>
                     <!-- portofolio ketiga end -->
@@ -157,8 +160,8 @@
 
                 <div class="portofolio-container" id="por4">
                     <!-- portofolio keempat start -->
-                    <div class="portofolio-item">
-                        <p class="dearmecca"><a href="">cmg soon</a></p>
+                    <div class="portofolio-item" data-aos="zoom-in-right" data-aos-duration="1500">
+                        <p class="dearmecca"><a href="#">cmg soon</a></p>
                     </div>
                     <!-- portofolio keempat end -->
                 </div>
@@ -184,7 +187,7 @@
                     <!-- input form start -->
                     <div class="box-imessage">
                         <!-- form message start -->
-                        <div class="imessage-container">
+                        <div class="imessage-container" data-aos="fade-down" data-aos-duration="1300">
                             <form name="message-form" onsubmit="return validateForm()" id="formboz">
                                 <!-- input nama start -->
                                 <div class="formm" id="nama">
@@ -236,7 +239,7 @@
 
                     <!-- output form start -->
                     <div class="box-omessage">
-                        <div class="omessage-container">
+                        <div class="omessage-container" data-aos="fade-down" data-aos-duration="1400">
                             <div class="out">
                                 <p>nama : <span id="sender-full-name"></span></p>
                                 <br>
@@ -264,7 +267,7 @@
     <footer>
         <!-- header footer start -->
         <header>
-            <h1 class="text-footer"><a href="#home">@dilloooo</a></h1>
+            <h1 class="text-footer">&copy; fadillaiizzar</h1>
         </header>
         <!-- header footer end -->
         
@@ -302,5 +305,10 @@
 
     <!-- link java script-->
     <script src="./js/script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </body>
 </html>
